@startuml
'https://plantuml.com/class-diagram

class HoaDon{
    # HoaDon(Builder builder)
}
'HoaDon: bao ham
'Thiet lap thi se de len cai cu
class Builder{
    + Builder setHeader(String maHD, String ngayBan, String tenKH)
    + Builder addCTHD (String SP, int soLuong, int Gia)
    + HoaDon build()
}
class HoaDonHeader
class CTHD

HoaDon --> "header" HoaDonHeader
HoaDon *--> "cthds" CTHD
HoaDon ..> Builder
Builder --> "header" HoaDonHeader
Builder *--> "cthds" CTHD

@enduml